--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     rest:
       base-uri: /api
   jpa:
-    show-sql: true
+    #show-sql: true
     hibernate:
       ddl-auto: create
 utils:
@@ -14,4 +14,4 @@ utils:
 logging:
   level:
     be.ordina: 'DEBUG'
-    org.hibernate: 'ERROR'
+    #org.hibernate: 'ERROR'
