--- a/pom.xml
+++ b/pom.xml
@@ -285,7 +285,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<includes>
-						<include>**/*Documentation.java</include>
+						<include>**/*Test.java</include>
 					</includes>
 					<systemPropertyVariables>
 						<org.springframework.restdocs.outputDir>${project.build.directory}/generated-snippets
