--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,7 @@ env:
   SPRING_PROFILES_ACTIVE : cloud
   JBP_CONFIG_OPEN_JDK_JRE: '[memory_calculator: {memory_heuristics: {heap: 70, metaspace: 10, stack: 10, native: 10}}]'
 applications:
-- name: employee-core-ordineo
+- name: employee-ordineo
   path: target/employee-core-service-0.0.1-SNAPSHOT.jar
   buildpack: https://github.com/cloudfoundry/java-buildpack
   timeout: 120
