Exception handling for exceptions during post and put actions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     rest:
       basePath: /api
       defaultMediaType: application/hal+json
+      returnBodyOnUpdate: false
+      returnBodyOnCreate: false
   jpa:
     show-sql: true
     hibernate:
