--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: https://eureka-ordineo.cfapps.io/eureka/ #http://localhost:8761/eureka/
-ribbon:
-  IsSecure: true
+#ribbon:
+#  IsSecure: true
 ---
 spring:
   profiles: cloud
